--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,8 @@ header {
 .painting {
 background-color: #778899;
 color: #16171f;
+text-align: center;
+padding-bottom: 10px;
 }
 .painting-item {
   display: grid;
@@ -172,6 +174,12 @@ footer {
   .contact-list{
   display: flex;
   justify-content: center;
+  
+  }
+  #png {
+    padding: 10px 5px  10px 5px;
+  max-width: 1cm;
+  max-height: 1cm;
   }
   img {
     width: 300px;
@@ -182,9 +190,9 @@ footer {
   h1 {
     font-size: 75px;
     line-height: 0.9;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    margin-left: 20px;
+    /* margin-bottom: 20px; */
+    /* margin-right: 20px; */
+    /* margin-left: 20px; */
 }
 h1 {
   line-height: 0.9;
