--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ font-size: 50px;
 }
 .item-details h3 ~ p {
 margin: 0;
+display: flex 
 }
 
 .divider > section {
@@ -107,7 +108,10 @@ background-color: #778899;
 color: #16171f;
 text-align: center;
 padding-bottom: 10px;
+margin: 0 auto;
+
 }
+
 .painting-item {
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -124,11 +128,13 @@ padding-bottom: 10px;
   background-color: #01BAEF;
   color: #16171f;
   text-align: center;
+  justify-content: space-evenly;
 }
 .modelmaking-details {
   background-color:#7FC29B;
   color: #16171f;
   text-align: center;
+  margin: 0 auto;
 }
 .woodcarving-details {
   background-color: #FCA311;
@@ -165,6 +171,7 @@ footer {
   .painting-item img {
     float: left;
     margin-right: 20px;
+    display: block;
   }
   .painting-item {
     display: grid;
@@ -176,13 +183,10 @@ footer {
   justify-content: center;
   
   }
-  #png {
-    padding: 10px 5px  10px 5px;
-  max-width: 1cm;
-  max-height: 1cm;
-  }
+  
+  
   img {
-    width: 300px;
+    width: 85%;
       /* min-height: 300px; */
      }
 
@@ -190,9 +194,9 @@ footer {
   h1 {
     font-size: 75px;
     line-height: 0.9;
-    /* margin-bottom: 20px; */
-    /* margin-right: 20px; */
-    /* margin-left: 20px; */
+    margin-bottom: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 h1 {
   line-height: 0.9;
