--- a/styles.css
+++ b/styles.css
@@ -178,15 +178,15 @@ footer {
     grid-template-columns: 1fr 2fr;
     column-gap: 20px;
   }
-  .contact-list{
-  display: flex;
-  justify-content: center;
+  /* .contact-list{ */
+  /* display: flex; */
+  /* justify-content: center; */
   
-  }
+  /* } */
   
   
   img {
-    width: 85%;
+    width: 300px;
       /* min-height: 300px; */
      }
 
